prevent y overflow on homepage load

--- a/css/index.css
+++ b/css/index.css
@@ -315,7 +315,10 @@ h6 {
     max-width: 100%;
   }
 }
-.home {
+.home-container {
+  overflow-y: hidden;
+}
+.home-container .home {
   height: calc(100vh - 5rem);
   display: flex;
   flex-direction: column;
@@ -323,17 +326,17 @@ h6 {
   align-items: center;
   animation: slideInFromBottom 0.5s ease-in-out forwards;
 }
-.home .container {
+.home-container .home .container {
   max-width: 80vw;
 }
-.home .container .hero {
+.home-container .home .container .hero {
   transform: skewX(-10deg);
   background-color: rgba(227, 227, 227, 0.5);
   padding: 5rem;
   text-align: center;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
-.home .container .hero .content {
+.home-container .home .container .hero .content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -341,17 +344,17 @@ h6 {
   animation: growAndSkew 0.6s ease-out forwards;
   transform: skewX(10deg);
 }
-.home .container .hero .content *:not(:last-child) {
+.home-container .home .container .hero .content *:not(:last-child) {
   margin-bottom: 2rem;
 }
 @media (max-width: 575px) {
-  .home .container {
+  .home-container .home .container {
     max-width: 90vw;
   }
-  .home .container .hero {
+  .home-container .home .container .hero {
     transform: skewX(0deg);
   }
-  .home .container .hero .content {
+  .home-container .home .container .hero .content {
     transform: inherit;
   }
 }
